begin add video to banner-link, fix social width on mobile

--- a/src/styles/modules/banner-link.scss
+++ b/src/styles/modules/banner-link.scss
@@ -133,4 +133,16 @@
             max-height: 100%;
         }
     }
+
+    .action-btn .icon {
+        position: absolute;
+        top: 0;
+        bottom: 0.25rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 4rem;
+        height: 4rem;
+        color: $primary-color;
+    }
 }
