--- a/src/styles/modules/social-feed.scss
+++ b/src/styles/modules/social-feed.scss
@@ -9,6 +9,10 @@
         &.purple {
             background: rgba($purple-color-light, 0.8);
         }
+
+        &.white {
+            background: $secondary-color;
+        }
     }
 
     .content {
@@ -21,7 +25,7 @@
         padding: 2rem 0;
 
         h1, h4 {
-            font-weight: lighter;
+            font-weight: bold;
             flex-basis: 100%;
             text-align: center;
         } 
@@ -83,6 +87,17 @@
         left: 0;
         right: 0;
         margin: auto;
+    }
+
+    twitter-widget.twitter-tweet {
+
+        @include mobile {
+            max-width: 92vw !important;
+        }
+
+        @include tablet {
+            max-width: 100% !important;
+        }
     }
 
     .divider {
